--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,7 +34,7 @@ jobs:
             npm run build
 
         - name: Deploy
-          uses: reggionick/s3-deploy@v3
+          uses: Reggionick/s3-deploy@v3.1.1
           with:
             folder: $PROY_DIR/build
             bucket: ${{ secrets.S3_BUCKET }}
