--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,7 +34,7 @@ jobs:
             npm run build
 
         - name: Deploy
-        - uses: jakejarvis/s3-sync-action@master
+          uses: jakejarvis/s3-sync-action@master
           with:
             args: --acl public-read --follow-symlinks --delete
           env:
