--- a/eden-app-fe-turista/package.json
+++ b/eden-app-fe-turista/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
