--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -20,7 +20,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       PROY_DIR: eden-app-fe-turista
-      BACKEND_ENDPOINT: ${{ secrets.BACKEND_ENDPOINT_STAGE }}
+      BACKEND_ENDPOINT: ${{ secrets.BACKEND_ENDPOINT_PROD }}
     steps:
         - uses: actions/checkout@v2
 
