--- a/.github/workflows/build-deploy-stage.yml
+++ b/.github/workflows/build-deploy-stage.yml
@@ -26,9 +26,8 @@ jobs:
 
         - name: Replace backend endpoint
           run: |
-            # se reemplaza: http://localhost:8080 -> https://api-stage.example.com asegurese de ponerlo así en el secret
-            sed -i'.bak' 's/http:\/\/localhost:8080/'"$BACKEND_ENDPOINT"'/g' eden-app-fe-turista/src/context/constants.js
-
+            sed -i.bak  's|http://localhost:8080|'$BACKEND_ENDPOINT'|g' eden-app-fe-turista/src/context/constants.js
+            
         - name: Install dependencies
           run: |
             cd $PROY_DIR
